<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        tools:context=".ActionActivity">

    <Button
            android:text="@string/tvContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:backgroundTint="@color/dark"
            android:textColor="@color/red2"
            app:layout_constraintTop_toBottomOf="@+id/btnPhone"/>
    <Button
            android:text="@string/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:backgroundTint="@color/dark"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera" android:textColor="@color/red2"/>
    <Button
            android:text="@string/tvCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/dark"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnLocation"
            android:textColor="@color/red2"/>
    <Button
            android:text="@string/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:backgroundTint="@color/dark"
            app:layout_constraintTop_toBottomOf="@+id/btnStorage" android:textColor="@color/red2"/>
    <Button
            android:text="@string/tvStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnStorage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/dark"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/red2"/>
</androidx.constraintlayout.widget.ConstraintLayout>