<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark"
            tools:context=".MainActivity">
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swContacts"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/swPhone"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvPhoneDesc2"
                app:layout_constraintHorizontal_bias="0.615"/>
        <TextView
                android:text="@string/tvContactsDesc"
                android:layout_width="231dp"
                android:layout_height="38dp" android:id="@+id/tvPhoneDesc2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvContacts"/>
        <TextView
                android:text="@string/tvContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvContacts"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp" android:textSize="20sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvPhoneDesc"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swPhone"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tvPhoneDesc" android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/swCamera" app:layout_constraintHorizontal_bias="0.615"/>
        <TextView
                android:text="@string/tvPhoneDesc"
                android:layout_width="231dp"
                android:layout_height="38dp" android:id="@+id/tvPhoneDesc"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvPhone"/>
        <TextView
                android:text="@string/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvPhone"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp" android:textSize="20sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvCameraDesc"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swCamera"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/swLocation"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvCameraDesc"
                app:layout_constraintHorizontal_bias="0.615"/>
        <TextView
                android:text="@string/tvCameraDesc"
                android:layout_width="231dp"
                android:layout_height="38dp" android:id="@+id/tvCameraDesc"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvCamera"/>
        <TextView
                android:text="@string/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvCamera"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp" android:textSize="20sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvLocationDesc"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swLocation"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/swStorage" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tvLocationDesc" app:layout_constraintHorizontal_bias="0.615"/>
        <TextView
                android:text="@string/tvLocationDesc"
                android:layout_width="231dp"
                android:layout_height="38dp" android:id="@+id/tvLocationDesc"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
                android:textSize="14sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>
        <TextView
                android:text="@string/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvLocation"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp" android:textSize="20sp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvStorageDesc"/>
        <TextView
                android:text="@string/tvLabel"
                android:layout_width="324dp"
                android:layout_height="59dp" android:id="@+id/tvLabel"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white" android:textSize="24sp"/>
        <TextView
                android:text="@string/tvStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvStorage"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp" android:textSize="20sp"/>
        <TextView
                android:text="@string/tvStorageDesc"
                android:layout_width="231dp"
                android:layout_height="38dp" android:id="@+id/tvStorageDesc"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvStorage"
                android:textSize="14sp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swStorage"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvStorageDesc"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
                android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                android:theme="@style/SCBSwitch"
                app:layout_constraintHorizontal_bias="0.615"/>
        <Button
                android:text="@string/btnContinue"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/btnContinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCancel" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/swContacts"
                android:textColor="@color/red2"
                app:backgroundTint="@color/dark"
                app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="16dp"
                android:onClick="jump"/>
        <Button
                android:text="@string/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="140dp"
                app:layout_constraintEnd_toStartOf="@+id/btnContinue"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                android:textColor="@color/red2"
                app:backgroundTint="@color/dark"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneDesc2" app:layout_constraintVertical_bias="1.0"
                android:layout_marginEnd="16dp" android:onClick="exit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

